force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/assigend_qc_id__c.field-meta.xml
<CustomField>
    <fullName>assigend_qc_id__c</fullName>
    <description>assigend_qc_id</description>
    <externalDeveloperName>assigend_qc_id</externalDeveloperName>
    <label>assigend_qc_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>