force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/cut_off_date__c.field-meta.xml
<CustomField>
    <fullName>cut_off_date__c</fullName>
    <description>cut_off_date</description>
    <externalDeveloperName>cut_off_date</externalDeveloperName>
    <label>cut_off_date</label>
    <type>DateTime</type>
</CustomField>