force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/forman2_id__c.field-meta.xml
<CustomField>
    <fullName>forman2_id__c</fullName>
    <description>forman2_id</description>
    <externalDeveloperName>forman2_id</externalDeveloperName>
    <label>forman2_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>