force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/raised_date__c.field-meta.xml
<CustomField>
    <fullName>raised_date__c</fullName>
    <description>raised_date</description>
    <externalDeveloperName>raised_date</externalDeveloperName>
    <label>raised_date</label>
    <type>DateTime</type>
</CustomField>