force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/remarks_raisedby_id__c.field-meta.xml
<CustomField>
    <fullName>remarks_raisedby_id__c</fullName>
    <description>remarks_raisedby_id</description>
    <externalDeveloperName>remarks_raisedby_id</externalDeveloperName>
    <label>remarks_raisedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>