force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/remarks_resolvedby_id__c.field-meta.xml
<CustomField>
    <fullName>remarks_resolvedby_id__c</fullName>
    <description>remarks_resolvedby_id</description>
    <externalDeveloperName>remarks_resolvedby_id</externalDeveloperName>
    <label>remarks_resolvedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>