force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/resolved_status_updatedby_id__c.field-meta.xml
<CustomField>
    <fullName>resolved_status_updatedby_id__c</fullName>
    <description>resolved_status_updatedby_id</description>
    <externalDeveloperName>resolved_status_updatedby_id</externalDeveloperName>
    <label>resolved_status_updatedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>