force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/verified_date__c.field-meta.xml
<CustomField>
    <fullName>verified_date__c</fullName>
    <description>verified_date</description>
    <externalDeveloperName>verified_date</externalDeveloperName>
    <label>verified_date</label>
    <type>DateTime</type>
</CustomField>