force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_log__x/fields/verifiedby_id__c.field-meta.xml
<CustomField>
    <fullName>verifiedby_id__c</fullName>
    <description>verifiedby_id</description>
    <externalDeveloperName>verifiedby_id</externalDeveloperName>
    <label>verifiedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>